--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ div#bg {
 .navbar {
   position: fixed;
   top: 0;
+  left: 0;
   background-color: #000000;
   width: 100%;
   font-family: garamond;
@@ -166,6 +167,7 @@ div#bg {
   display: flex;
   background-color: black;
   bottom: 0;
+  left:0;
   margin-top:5%;
 
   .text {
