--- a/styleorder.css
+++ b/styleorder.css
@@ -30,6 +30,7 @@ div#bg {
 .navbar {
     position: fixed;
     top: 0;
+    left: 0;
     background-color: #000000;
     width: 100%;
     font-family: garamond;
@@ -96,10 +97,11 @@ div#bg {
 .impressum {
  width: 100%;
  height: auto;
- position: relative;
+ position: fixed;
  display: flex;
  background-color: black;
  bottom: 0;
+ left:0;
  margin-top:5%;
  
  .text {
