--- a/styleorder.css
+++ b/styleorder.css
@@ -63,7 +63,6 @@ div#bg {
     }
  }
 
-
 .pics_right {
     .box_left{
       width: 75%;
@@ -112,6 +111,79 @@ div#bg {
 label {
   display: block;
 }
+input {
+  padding: 6px 12px;
+background: rgb(31, 32, 35);
+border: 1px solid rgb(60, 63, 68);
+border-radius: 4px;
+font-size: 13px;
+color: rgb(247, 248, 248);
+height: 25px;
+appearance: none;
+transition: border 0.15s ease 0s;
+:focus{
+    outline: none;
+    box-shadow: none;
+    border-color: rgb(100, 153, 255);
+}
+
+}
+
+button {
+  display: inline-block;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  border-radius: 8px;
+  padding: 14px 24px 16px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1;
+  transition: transform 200ms, background 200ms;
+  background: white;
+  color: #000000;
+  box-shadow: 0 0 0 3px #000000 inset;
+  :hover{
+      transform: translateY(-2px);
+  }
+  
+}
+
+select {
+  padding: 6px 12px;
+  background: rgb(31, 32, 35);
+  border: 1px solid rgb(60, 63, 68);
+  border-radius: 4px;
+  font-size: 13px;
+  color: rgb(247, 248, 248);
+  height: 40px;
+  width: 200px;
+  appearance: none;
+  transition: border 0.15s ease 0s;
+  :focus{
+      outline: none;
+      box-shadow: none;
+      border-color: rgb(100, 153, 255);
+  }
+  background-image:
+    linear-gradient(45deg, transparent 50%, gray 50%),
+    linear-gradient(135deg, gray 50%, transparent 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position:
+    calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px),
+    calc(100% - 2.5em) 0.5em;
+  background-size:
+    5px 5px,
+    5px 5px,
+    1px 1.5em;
+  background-repeat: no-repeat;
+}
+
+
+.amount {
+  height: auto;
+}
 
 .grid {
   display: grid;
@@ -147,4 +219,3 @@ label {
 .ordersummary {
   padding: 10px;
 }
-
