--- a/styleorder.css
+++ b/styleorder.css
@@ -124,7 +124,7 @@ transition: border 0.15s ease 0s;
 :focus{
     outline: none;
     box-shadow: none;
-    border-color: rgb(100, 153, 255);
+    border-color: rgb(172, 172, 172);
 }
 
 }
@@ -137,8 +137,8 @@ button {
   border-radius: 8px;
   padding: 14px 24px 16px;
   font-size: 14px;
-  font-weight: 700;
-  line-height: 1;
+  font-weight: 700; 
+  line-height: 1;  /*Zeilenabstand*/
   transition: transform 200ms, background 200ms;
   background: white;
   color: #000000;
@@ -163,7 +163,7 @@ select {
   :focus{
       outline: none;
       box-shadow: none;
-      border-color: rgb(100, 153, 255);
+      border-color: rgb(187, 187, 187);
   }
   background-image:
     linear-gradient(45deg, transparent 50%, gray 50%),
