--- a/styleorder.css
+++ b/styleorder.css
@@ -219,3 +219,9 @@ select {
 .ordersummary {
   padding: 10px;
 }
+
+.daten {
+  text-decoration: none;
+  font-family: garamond;
+  color: rgb(170, 170, 170);
+}
