--- a/styleorder.css
+++ b/styleorder.css
@@ -1,5 +1,6 @@
 body{
     overflow-x: hidden;
+    margin: 0;
 }
 
 div#bg {
@@ -108,6 +109,11 @@ div#bg {
  .text {
     font-size: 20px
  }
+}
+
+.pic{
+  width: 100%;
+  height: auto;
 }
 
 label {
